# BerkeleyHomeSensors

./: .env.example  .gitignore  README.md  circuit_labels.yml  pyproject.toml
scripts/: setup_influxdb.sh
src/homesensors/: __init__.py  config.py  main.py
src/homesensors/api/: server.py
src/homesensors/ingest/: influx_writer.py  mqtt_subscriber.py  schema.py
src/homesensors/integrations/: dashboard.py  mqtt_publisher.py  rachio_observer.py
src/homesensors/rules/: climate_rules.py  engine.py  leak_rules.py  power_rules.py  soil_rules.py
src/homesensors/storage/: client.py  queries.py  retention.py
src/homesensors/telemetry/: health.py
tests/: __init__.py  test_ingest.py  test_leak_rules.py
