[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "berkeley-homesensors"
version = "0.1.0"
description = "Berkeley house infrastructure sensor monitoring — soil, leak, power, climate"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0",
    "influxdb-client>=1.36",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=23.0",
    "uvicorn>=0.27",
    "fastapi>=0.109",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.scripts]
homesensors = "homesensors.main:main"
